--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pnet-app-service
+  name: net-app-service
 spec:
   selector:
-    app: pnet-app
+    app: net-app
   ports:
-    - protocol: TCP
+    - name: pnet-app-port
+      protocol: TCP
       port: 8889
       targetPort: 8889
+    - name: gnet-app-port
+      protocol: TCP
+      port: 8888
+      targetPort: 8888
   type: LoadBalancer
