helfile + config map

--- a/k8s/templates/deployment.yaml
+++ b/k8s/templates/deployment.yaml
@@ -21,3 +21,9 @@ spec:
           image: {{ .Values.gnet.container.image }}
           ports:
             - containerPort: {{ .Values.gnet.container.port }}
+          env:
+          - name: GREETING
+            valueFrom:
+              configMapKeyRef:
+                name: gnet-config
+                key: greeting
